<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.porkandlager.travelonbudget.mvp.FlightDetail.FlightDetailActivity">

    <RelativeLayout
        android:id="@+id/flight_detail_context_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/apptheme_color"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/flight_detail_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/searching"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>

    </RelativeLayout>

    <com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_below="@id/flight_detail_context_bar"
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:parallax_factor="1.9"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true">

            <ImageView
                android:id="@+id/flight_detail_image"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_alignParentTop="true"/>

            <RelativeLayout
                android:id="@+id/flight_detail_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@android:color/transparent"
                android:layout_below="@id/flight_detail_image">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginBottom="75dp">

                    <TextView
                        android:id="@+id/flight_detail_overview_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:text="@string/flight_detail_overview"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/flight_detail_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/flight_detail_overview_text"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/flight_detail_places_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/flight_detail_desc"
                        android:layout_marginTop="30dp"
                        android:background="@android:color/white"
                        android:text="@string/flight_detail_places"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/flight_detail_desc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/flight_detail_places_text"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </com.nirhart.parallaxscroll.views.ParallaxScrollView>

    <RelativeLayout
        android:id="@+id/book_now_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white">

        <View
            android:id="@+id/book_now_topline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/tintgray"/>

        <RelativeLayout
            android:id="@+id/book_now_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_now_topline"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <RelativeLayout
                android:id="@+id/book_now_pricing_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/book_now_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_now_default_price"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/almost_black"/>

                <TextView
                    android:id="@+id/book_now_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_now_price"
                    android:text="@string/book_now_default_dates"
                    android:textColor="@color/tintgray"
                    android:textSize="12sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/book_now_button_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <Button
                    android:id="@+id/book_now_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/book_now_button_text"
                    android:textStyle="normal"
                    android:background="@color/apptheme_color"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
